@@ -16,10 +16,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
+import jakarta.servlet.http.HttpServletRequest;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
+import java.util.Optional;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -32,99 +34,106 @@ public class PolygonController {
     private final PolygonConfig polygonConfig;
     private final MaskRCNNInferenceService maskRCNNService;
 
-    @PostMapping(value = "/overlay", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    /**
+     * Process PNG image and return overlay with red polygons
+     * Supports both raw PNG body and multipart form data
+     */
+    @PostMapping(value = "/overlay", consumes = {MediaType.IMAGE_PNG_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE})
     public ResponseEntity<byte[]> overlay(
-            @RequestParam("data") MultipartFile data,
-            @RequestParam(name = "resolution", defaultValue = "0.20") double resolution,
-            @RequestParam(name = "debug", defaultValue = "false") boolean debug) throws Exception {
+            HttpServletRequest request,
+            @RequestParam(value = "ppm", required = false) Double ppmParam,
+            @RequestParam(value = "debug", defaultValue = "false") boolean debug,
+            @RequestPart(value = "data", required = false) MultipartFile data) throws Exception {
         
-        File tmp = File.createTempFile("in_", null);
-        data.transferTo(tmp);
-
-        File png;
-        double ppm;
-        String name = data.getOriginalFilename().toLowerCase();
-
-        if (name.endsWith(".laz") || name.endsWith(".las")) {
-            LidarPreprocessor.PreResult pr = LidarPreprocessor.lazToPng(tmp, resolution);
-            png = pr.png();
-            ppm = 1.0 / resolution;
+        // Get PNG bytes from either raw body or multipart
+        byte[] pngBytes;
+        if (data != null) {
+            pngBytes = data.getBytes();
         } else {
-            png = tmp;
-            ppm = polygonConfig.getPpm();
+            pngBytes = request.getInputStream().readAllBytes();
         }
-
-        byte[] pngBytes = java.nio.file.Files.readAllBytes(png.toPath());
-        OverlayResult out = lanePolygonService.process(pngBytes, ppm);
         
-        tmp.delete();
-        if (!png.equals(tmp)) {
-            png.delete();
+        // Use provided ppm or default
+        double ppm = ppmParam != null ? ppmParam : polygonConfig.getDefaultPpm();
+        
+        // Optional MaskRCNN segmentation (can be integrated later)
+        Optional<byte[]> segmentationMask = Optional.empty();
+        if (maskRCNNService.isServiceHealthy()) {
+            try {
+                // Get segmentation mask from MaskRCNN service if available
+                segmentationMask = maskRCNNService.getSegmentationMask(pngBytes);
+            } catch (Exception e) {
+                // Continue without segmentation if service fails
+            }
         }
+        
+        // Process the PNG
+        OverlayResult out = lanePolygonService.processPng(pngBytes, ppm, segmentationMask, debug);
         
         return ResponseEntity.ok()
             .contentType(MediaType.IMAGE_PNG)
             .body(out.pngBytes());
     }
 
-    @PostMapping(value = "", consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    /**
+     * Process PNG image and return polygon JSON data only
+     * Supports both raw PNG body and multipart form data
+     */
+    @PostMapping(value = "", consumes = {MediaType.IMAGE_PNG_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE}, produces = MediaType.APPLICATION_JSON_VALUE)
     public List<PolygonDto> polygons(
-            @RequestParam("data") MultipartFile data,
-            @RequestParam(name = "resolution", defaultValue = "0.20") double resolution) throws Exception {
+            HttpServletRequest request,
+            @RequestParam(value = "ppm", required = false) Double ppmParam,
+            @RequestPart(value = "data", required = false) MultipartFile data) throws Exception {
         
-        File tmp = File.createTempFile("in_", null);
-        data.transferTo(tmp);
-
-        File png;
-        double ppm;
-        String name = data.getOriginalFilename().toLowerCase();
-
-        if (name.endsWith(".laz") || name.endsWith(".las")) {
-            LidarPreprocessor.PreResult pr = LidarPreprocessor.lazToPng(tmp, resolution);
-            png = pr.png();
-            ppm = 1.0 / resolution;
+        // Get PNG bytes from either raw body or multipart
+        byte[] pngBytes;
+        if (data != null) {
+            pngBytes = data.getBytes();
         } else {
-            png = tmp;
-            ppm = polygonConfig.getPpm();
-        }
-
-        byte[] pngBytes = java.nio.file.Files.readAllBytes(png.toPath());
-        OverlayResult out = lanePolygonService.process(pngBytes, ppm);
-        
-        tmp.delete();
-        if (!png.equals(tmp)) {
-            png.delete();
+            pngBytes = request.getInputStream().readAllBytes();
         }
         
-        return out.polygons();
+        // Use provided ppm or default
+        double ppm = ppmParam != null ? ppmParam : polygonConfig.getDefaultPpm();
+        
+        // Optional MaskRCNN segmentation
+        Optional<byte[]> segmentationMask = Optional.empty();
+        if (maskRCNNService.isServiceHealthy()) {
+            try {
+                segmentationMask = maskRCNNService.getSegmentationMask(pngBytes);
+            } catch (Exception e) {
+                // Continue without segmentation
+            }
+        }
+        
+        // Process and return polygons only
+        return lanePolygonService.polygonsOnly(pngBytes, ppm, segmentationMask);
     }
 
-    @PostMapping(value = "/debug", consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = "application/zip")
+    /**
+     * Debug endpoint - returns ZIP with intermediate processing images
+     */
+    @PostMapping(value = "/debug", consumes = {MediaType.IMAGE_PNG_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE}, produces = "application/zip")
     public ResponseEntity<byte[]> debug(
-            @RequestParam("data") MultipartFile data,
-            @RequestParam(name = "resolution", defaultValue = "0.20") double resolution) throws Exception {
+            HttpServletRequest request,
+            @RequestParam(value = "ppm", required = false) Double ppmParam,
+            @RequestPart(value = "data", required = false) MultipartFile data) throws Exception {
         
-        File tmp = File.createTempFile("in_", null);
-        data.transferTo(tmp);
-
-        File png;
-        String name = data.getOriginalFilename().toLowerCase();
-
-        if (name.endsWith(".laz") || name.endsWith(".las")) {
-            LidarPreprocessor.PreResult pr = LidarPreprocessor.lazToPng(tmp, resolution);
-            png = pr.png();
+        // Get PNG bytes from either raw body or multipart
+        byte[] pngBytes;
+        if (data != null) {
+            pngBytes = data.getBytes();
         } else {
-            png = tmp;
-        }
-
-        byte[] pngBytes = java.nio.file.Files.readAllBytes(png.toPath());
-        DebugFrames frames = lanePolygonService.processWithDebug(pngBytes);
-        
-        tmp.delete();
-        if (!png.equals(tmp)) {
-            png.delete();
+            pngBytes = request.getInputStream().readAllBytes();
         }
         
+        // Use provided ppm or default
+        double ppm = ppmParam != null ? ppmParam : polygonConfig.getDefaultPpm();
+        
+        // Process with debug mode to get intermediate frames
+        DebugFrames frames = lanePolygonService.processWithDebug(pngBytes, ppm);
+        
+        // Create ZIP with all debug images
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
         try (ZipOutputStream zos = new ZipOutputStream(baos)) {
             addToZip(zos, "road.png", frames.roadMask());
@@ -147,81 +156,73 @@ public class PolygonController {
         zos.closeEntry();
     }
     
-    // MaskRCNN Endpoints
+    // ============ MaskRCNN Endpoints (Enhanced) ============
     
-    @PostMapping(value = "/maskrcnn", consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    @PostMapping(value = "/maskrcnn", consumes = {MediaType.IMAGE_PNG_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE}, produces = MediaType.APPLICATION_JSON_VALUE)
     public MaskRCNNResponse maskrcnnInference(
-            @RequestParam("data") MultipartFile data,
-            @RequestParam(name = "resolution", defaultValue = "0.20") double resolution,
-            @RequestParam(name = "min_area", defaultValue = "200") int minArea) throws Exception {
+            HttpServletRequest request,
+            @RequestParam(value = "ppm", required = false) Double ppmParam,
+            @RequestParam(name = "min_area", defaultValue = "200") int minArea,
+            @RequestPart(value = "data", required = false) MultipartFile data) throws Exception {
         
-        File tmp = File.createTempFile("in_", null);
-        data.transferTo(tmp);
-
-        File png;
-        double ppm;
-        String name = data.getOriginalFilename().toLowerCase();
-
-        if (name.endsWith(".laz") || name.endsWith(".las")) {
-            LidarPreprocessor.PreResult pr = LidarPreprocessor.lazToPng(tmp, resolution);
-            png = pr.png();
-            ppm = 1.0 / resolution;
+        // Get PNG bytes
+        byte[] pngBytes;
+        if (data != null) {
+            pngBytes = data.getBytes();
         } else {
-            png = tmp;
-            ppm = polygonConfig.getPpm();
+            pngBytes = request.getInputStream().readAllBytes();
         }
-
-        MaskRCNNResponse response = maskRCNNService.inferPolygons(png, ppm, minArea);
+        
+        double ppm = ppmParam != null ? ppmParam : polygonConfig.getDefaultPpm();
+        
+        // Save to temp file for MaskRCNN processing
+        File tmp = File.createTempFile("maskrcnn_", ".png");
+        java.nio.file.Files.write(tmp.toPath(), pngBytes);
+        
+        MaskRCNNResponse response = maskRCNNService.inferPolygons(tmp, ppm, minArea);
         
         tmp.delete();
-        if (!png.equals(tmp)) {
-            png.delete();
-        }
         
         return response;
     }
     
-    @PostMapping(value = "/maskrcnn/overlay", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    @PostMapping(value = "/maskrcnn/overlay", consumes = {MediaType.IMAGE_PNG_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE})
     public ResponseEntity<byte[]> maskrcnnOverlay(
-            @RequestParam("data") MultipartFile data,
-            @RequestParam(name = "resolution", defaultValue = "0.20") double resolution,
+            HttpServletRequest request,
+            @RequestParam(value = "ppm", required = false) Double ppmParam,
             @RequestParam(name = "min_area", defaultValue = "200") int minArea,
-            @RequestParam(name = "validate_rules", defaultValue = "true") boolean validateRules) throws Exception {
+            @RequestParam(name = "validate_rules", defaultValue = "true") boolean validateRules,
+            @RequestPart(value = "data", required = false) MultipartFile data) throws Exception {
         
-        File tmp = File.createTempFile("in_", null);
-        data.transferTo(tmp);
-
-        File png;
-        double ppm;
-        String name = data.getOriginalFilename().toLowerCase();
-
-        if (name.endsWith(".laz") || name.endsWith(".las")) {
-            LidarPreprocessor.PreResult pr = LidarPreprocessor.lazToPng(tmp, resolution);
-            png = pr.png();
-            ppm = 1.0 / resolution;
+        // Get PNG bytes
+        byte[] pngBytes;
+        if (data != null) {
+            pngBytes = data.getBytes();
         } else {
-            png = tmp;
-            ppm = polygonConfig.getPpm();
+            pngBytes = request.getInputStream().readAllBytes();
         }
-
-        // Get MaskRCNN polygons
-        MaskRCNNResponse maskrcnnResponse = maskRCNNService.inferPolygons(png, ppm, minArea);
         
-        // Convert to traditional pipeline for overlay rendering and rule validation
-        byte[] pngBytes = java.nio.file.Files.readAllBytes(png.toPath());
+        double ppm = ppmParam != null ? ppmParam : polygonConfig.getDefaultPpm();
+        
+        // Save to temp file for MaskRCNN
+        File tmp = File.createTempFile("maskrcnn_", ".png");
+        java.nio.file.Files.write(tmp.toPath(), pngBytes);
+        
+        // Get MaskRCNN polygons
+        MaskRCNNResponse maskrcnnResponse = maskRCNNService.inferPolygons(tmp, ppm, minArea);
+        
+        tmp.delete();
+        
+        // Generate overlay
         OverlayResult overlayResult;
         
         if (validateRules) {
             // Use traditional pipeline with RAG validation
-            overlayResult = lanePolygonService.process(pngBytes, ppm);
+            Optional<byte[]> segMask = Optional.empty();
+            overlayResult = lanePolygonService.processPng(pngBytes, ppm, segMask, false);
         } else {
             // Use MaskRCNN results directly for overlay
             overlayResult = lanePolygonService.processWithMaskRCNN(pngBytes, maskrcnnResponse);
-        }
-        
-        tmp.delete();
-        if (!png.equals(tmp)) {
-            png.delete();
         }
         
         return ResponseEntity.ok()
@@ -237,5 +238,34 @@ public class PolygonController {
         return healthy ? 
             ResponseEntity.ok("MaskRCNN inference service is healthy") :
             ResponseEntity.status(503).body("MaskRCNN inference service is not available");
+    }
+    
+    /**
+     * Legacy endpoint for LAZ files (backwards compatibility)
+     */
+    @PostMapping(value = "/overlay/laz", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<byte[]> overlayLaz(
+            @RequestParam("data") MultipartFile data,
+            @RequestParam(name = "resolution", defaultValue = "0.20") double resolution) throws Exception {
+        
+        File tmp = File.createTempFile("laz_", null);
+        data.transferTo(tmp);
+        
+        // Convert LAZ to PNG
+        LidarPreprocessor.PreResult pr = LidarPreprocessor.lazToPng(tmp, resolution);
+        File png = pr.png();
+        double ppm = 1.0 / resolution;
+        
+        byte[] pngBytes = java.nio.file.Files.readAllBytes(png.toPath());
+        
+        Optional<byte[]> segMask = Optional.empty();
+        OverlayResult out = lanePolygonService.processPng(pngBytes, ppm, segMask, false);
+        
+        tmp.delete();
+        png.delete();
+        
+        return ResponseEntity.ok()
+            .contentType(MediaType.IMAGE_PNG)
+            .body(out.pngBytes());
     }
 }
